fix: code block overflow

--- a/src/styles/code.scss
+++ b/src/styles/code.scss
@@ -1,4 +1,4 @@
 // fixes an issue where type popups are cut off
 .astro-code {
-  overflow: visible !important;
+  overflow: auto !important;
 }
